2003-03-11 Baptiste Lepilleur <gaiacrtn@free.fr>
  * config/bb_enable_doxygen.m4:
  * doc/Makefile.am: applied Luke Dunstan's fix for bug #700730 (spaces not
    allowed in doxygen path)

  * include/cppunit/tools/Algorithm.h:
  * src/cppunit/TestResult.cpp:
  * src/msvc6/testrunner/TestRunnerModel.cpp: added removeFromSequence 
    algorithm in Algorithm.h to fix STLPort compatibility issue 
	(std::remove use the one of cstdio instead of algorithm). Bug #694971.

2003-01-23 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/extensions/TestNamer.h: fixed bug #662666 (missing include
    for typeinfo).

2002-12-12 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/cppunit/TestResult.cpp: TestFailure are no longer passed as temporary,
    but explicitely instantiated on the stack. Work around AIX compiler bug.

2002-12-03 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/TextTestResult.h: added missing dll export for 
    operator << (bug #610119).

2002-12-02 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/plugin/DynamicLibraryManagerException.h: added constructor
    to fix compilation issues on recents version of gcc and sun CC (bug #619059)

  * include/cppunit/input/XmlInputHelper.h: added.

  * src/cppunit/XmlOuputter.cpp: use iterator instead of const_iterator.

  * src/src/msvc6/testrunner/DynamicWindow/cdxCDynamicWnd.cpp: added call to
    IsUp() in cdxCDynamicWnd::DoOnGetMinMaxInfo() before calling 
    GetBorderSize() which caused an assertion. Bug #643612.

2002-09-10 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/extensions/TestSuiteBuilderContext.h:
  * src/cppunit/TestSuiteBuilderContext.cpp: added addProperty() and
    getStringProperty(). Added macros CPPUNIT_TEST_SUITE_PROPERTY.

  * src/msvc6/testrunner/TestRunnerDlg.cpp: integrated Tim Threlkeld's
    bug fix #610162: browse button was disabled if history was empty.

  * src/msvc6/testrunner/DynamicWindow/cdxCSizeIconCtrl.cpp: integrated 